@@ -1,3 +1,7 @@
+2002-09-16  Dom Lachowicz <doml@appligent.com>
+
+	* rsvg.c (rsvg_start_svg): Support the viewbox
+	
 2002-09-15  Dom Lachowicz <doml@appligent.com>
 
 	* rsvg.c (): Use g_ascii_strtod instead of atof, strtod, g_strtod
